--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
+    "lint-check": "npm run lint:markuplint && npm run check:prettier",
+    "lint:markuplint": "markuplint \"./**/*.html\"",
     "check:prettier": "prettier --check \"./**/*.{html,css,json,yml}\"",
+    "fix": "npm run fix:markuplint && npm run fix:prettier",
+    "fix:markuplint": "npm run lint:markuplint -- --fix",
     "fix:prettier": "npm run check:prettier -- --write"
   },
   "devDependencies": {
+    "markuplint": "^4.11.8",
     "prettier": "^3.5.3",
     "vite": "^6.2.0"
   },
