--- a/package.json
+++ b/package.json
@@ -7,16 +7,22 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint-check": "npm run lint:markuplint && npm run check:prettier",
+    "lint-check": "npm run lint:markuplint && npm run lint:stylelint && npm run check:prettier",
     "lint:markuplint": "markuplint \"./**/*.html\"",
+    "lint:stylelint": "stylelint \"./css/**/*.css\"",
     "check:prettier": "prettier --check \"./**/*.{html,css,json,yml}\"",
-    "fix": "npm run fix:markuplint && npm run fix:prettier",
+    "fix": "npm run fix:markuplint && npm run fix:stylelint && npm run fix:prettier",
     "fix:markuplint": "npm run lint:markuplint -- --fix",
+    "fix:stylelint": "npm run lint:stylelint -- --fix",
     "fix:prettier": "npm run check:prettier -- --write"
   },
   "devDependencies": {
     "markuplint": "^4.11.8",
     "prettier": "^3.5.3",
+    "stylelint": "^16.18.0",
+    "stylelint-config-recess-order": "^6.0.0",
+    "stylelint-config-standard": "^38.0.0",
+    "stylelint-order": "^6.0.4",
     "vite": "^6.2.0"
   },
   "volta": {
