--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "fix:prettier": "npm run check:prettier -- --write"
   },
   "devDependencies": {
+    "browserslist": "^4.24.4",
+    "lightningcss": "^1.29.3",
     "markuplint": "^4.11.8",
     "prettier": "^3.5.3",
     "stylelint": "^16.18.0",
