--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ch-simple-frequently-asked-questions",
+  "name": "ch-simple-faq",
   "private": true,
   "version": "0.0.0",
   "type": "module",
