--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "fix:markuplint": "npm run lint:markuplint -- --fix",
     "fix:stylelint": "npm run lint:stylelint -- --fix",
     "fix:prettier": "npm run check:prettier -- --write",
+    "deploy": "npm run build && gh-pages -d dist",
     "prepare": "lefthook install || echo 'Can not set git hooks'"
   },
   "devDependencies": {
     "browserslist": "^4.24.4",
+    "gh-pages": "^6.3.0",
     "lefthook": "^1.11.9",
     "lightningcss": "^1.29.3",
     "markuplint": "^4.11.8",
